--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,13 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+# main
+# api
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+*.asdf
+
+*/proto/*.go
+*/sqlc/*.go
