--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,16 @@
 version: "3.8"
 services:
-  api:
-    build: ./api
+  api-auth:
+    build: ./api-auth
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_HOST: ${POSTGRES_HOST}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_PORT: ${POSTGRES_PORT}
+      API_AUTH_PORT: ${API_AUTH_PORT}
     volumes:
-      - ./api:/app
+      - ./api-auth:/app
     # command: go test # ???
     depends_on:
       - postgres
@@ -18,11 +19,11 @@ services:
       - postgres
       # - redis
     ports:
-      - "5051:5051"
+      - "${API_AUTH_PORT}:${API_AUTH_PORT}"
 
     # access to the server:
     # $> docker-compose exec server sh
-    
+  
     # go test (only logic part):
     # $> docker-compose exec server gp test ./logic
 
