--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,55 +2,39 @@ version: "3.8"
 services:
   api-auth:
     build: ./api-auth
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_HOST: ${POSTGRES_HOST}
-      POSTGRES_PORT: ${POSTGRES_PORT}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
-      API_AUTH_PORT: ${API_AUTH_PORT}
+    env_file:
+      - ./api-auth/.env
+      - ./postgres/.env
     volumes:
       - ./api-auth:/app
-    # command: go test # ???
     depends_on:
       - postgres
-      # - redis
     links:
       - postgres
-      # - redis
     ports:
       - "${API_AUTH_PORT}:${API_AUTH_PORT}"
 
     # access to the server:
     # $> docker-compose exec server sh
   
-    # go test (only logic part):
-    # $> docker-compose exec server gp test ./logic
-
   postgres:
     image: postgres
     restart: always
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
-      PGUSER: ${PGUSER}         # psql
-      PGPASSWORD: ${PGPASSWORD} # psql
-      PGDATABASE: ${PGDATABASE} # psql
+    env_file:
+      - ./postgres/.env
     ports:
       - "${POSTGRES_PORT}:${POSTGRES_PORT}"
     volumes:
       - postgres-data:/var/lib/postgresql/data
       - ./postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
 
-    # access to the psql CLI (to fizzbuzz database):
+    # access to the psql CLI:
     # $> docker-compose exec postgres psql
 
   pgadmin:
     image: dpage/pgadmin4
-    environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
+    env_file:
+      - ./pg-admin/.env
     depends_on:
       - postgres
     ports:
@@ -63,8 +47,9 @@ services:
   
   client:
     build: ./client
-    environment:
-      CLIENT_PORT: ${CLIENT_PORT}
+    env_file:
+      - ./client/.env
+      - ./api-auth/.env
     volumes:
       - ./client:/app
     depends_on:
@@ -79,5 +64,3 @@ volumes:
     driver: local
   pgadmin-data:
     driver: local
-  # redis-data:
-  #   driver: local
