--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# IDE
+.vscode
+.idea
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -5,6 +9,8 @@
 *.so
 *.dylib
 **/main
+pkg
+bin
 
 # Test binary, built with `go test -c`
 *.test
@@ -21,3 +27,6 @@
 **/toto*
 **/tutu*
 **/tata*
+
+# Env
+.env
