--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,20 @@ services:
     ports:
       - "${API_AUTH_PORT}:${API_AUTH_PORT}"
 
+  api-scrapper:
+    build: ./api-scrapper
+    env_file:
+      - ./api-scrapper/.env
+      - ./postgres/.env
+    volumes:
+      - ./api-scrapper:/app
+    depends_on:
+      - postgres
+    links:
+      - postgres
+    ports:
+      - "${API_SCRAPPER_PORT}:${API_SCRAPPER_PORT}"
+
     # access to the server:
     # $> docker-compose exec server sh
   
