[Dev] Add import-medias script

--- a/sqlc/sqlc.yaml
+++ b/sqlc/sqlc.yaml
@@ -1,4 +1,4 @@
-version: 1
+version: "1"
 packages:
   - path: "../api-auth/sqlc"
     name: "sqlc"
@@ -10,6 +10,15 @@ packages:
   - path: "../api-scrapper/sqlc"
     name: "sqlc"
     engine: "postgresql"
+    sql_package: "pgx/v4"
+    schema:
+      - "sql/scrapper/schema.sql"
+    queries:
+      - "sql/scrapper/query.sql"
+  - path: "../scripts/import-medias/sqlc"
+    name: "sqlc"
+    engine: "postgresql"
+    sql_package: "pgx/v4"
     schema:
       - "sql/scrapper/schema.sql"
     queries:
