[Dev] register: finish basic registration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,10 @@ services:
       - ./api-auth:/app
     depends_on:
       - postgres
+      - redis
     links:
       - postgres
+      - redis
     ports:
       - "${API_AUTH_GRPC_PORT}:${API_AUTH_GRPC_PORT}"
       - "${API_AUTH_HTTP_PORT}:${API_AUTH_HTTP_PORT}"
@@ -31,6 +33,14 @@ services:
 
     # access to the psql CLI:
     # $> docker-compose exec postgres psql
+
+  redis:
+    image: redis:7.0.2-alpine
+    volumes:
+      - redis-data:/data
+
+    # access to the redis CLI:
+    # $> docker-compose exec redis sh -c 'redis-cli -h redis'
 
   pgadmin:
     image: dpage/pgadmin4
@@ -62,6 +72,8 @@ services:
 
 volumes:
   postgres-data:
+    driver: local
+  redis-data:
     driver: local
   pgadmin-data:
     driver: local
