--- a/sqlc/sqlc.yaml
+++ b/sqlc/sqlc.yaml
@@ -11,6 +11,7 @@ packages:
     name: "sqlc"
     engine: "postgresql"
     schema:
+      - "sql/medias/schema.sql"
       - "sql/torrents/schema.sql"
     queries:
       - "sql/scrapper/query.sql"
@@ -18,6 +19,7 @@ packages:
     name: "sqlc"
     engine: "postgresql"
     schema:
+      - "sql/medias/schema.sql"
       - "sql/torrents/schema.sql"
     queries:
       - "sql/search/query.sql"
