--- a/api-auth/.env
+++ b/api-auth/.env
@@ -1,2 +1,11 @@
 API_AUTH_GRPC_PORT=7010
-API_AUTH_HTTP_PORT=7070
+API_AUTH_GRPC_GATEWAY_PORT=7070
+API_AUTH_HTTP_PORT=7080
+
+42_REDIRECTION_REQUEST_URL=...
+42_REDIRECTION_GRANT_TYPE=...
+42_REDIRECTION_CLIENT_ID=...
+42_REDIRECTION_CLIENT_SECRET=...
+42_REDIRECTION_REDIRECT_URI_ID=...
+
+42_REQUEST_ME=...
