--- a/api-auth/.env.example
+++ b/api-auth/.env.example
@@ -2,10 +2,10 @@ API_AUTH_GRPC_PORT=0000
 API_AUTH_GRPC_GATEWAY_PORT=0000
 API_AUTH_HTTP_PORT=0000
 
-42_REDIRECTION_REQUEST_URL=...
-42_REDIRECTION_GRANT_TYPE=...
-42_REDIRECTION_CLIENT_ID=...
-42_REDIRECTION_CLIENT_SECRET=...
-42_REDIRECTION_REDIRECT_URI_ID=...
+API_42_REDIRECTION_REQUEST_URL=...
+API_42_REDIRECTION_GRANT_TYPE=...
+API_42_REDIRECTION_CLIENT_ID=...
+API_42_REDIRECTION_CLIENT_SECRET=...
+API_42_REDIRECTION_REDIRECT_URI_ID=...
 
-42_REQUEST_ME=...
+API_42_REQUEST_ME=...
