[Dev] Avoid reloading results when reloading the search page [Dev] Add missing background in Media get message [Env] Link api-search to client in docker-compose for SSR

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -92,6 +92,7 @@ services:
       - api-auth
     links:
       - api-auth
+      - api-search
     ports:
       - "${CLIENT_PORT}:${CLIENT_PORT}"
 
