--- a/sqlc/sqlc.yaml
+++ b/sqlc/sqlc.yaml
@@ -7,3 +7,11 @@ packages:
       - "sql/users/schema.sql"
     queries:
       - "sql/users/query.sql"
+
+  - path: "../api-user/sqlc"
+    name: "sqlc"
+    engine: "postgresql"
+    schema:
+      - "sql/users/schema.sql"
+    queries:
+      - "sql/users/query.sql"
