--- a/client/package.json
+++ b/client/package.json
@@ -31,5 +31,8 @@
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"quantize": "^1.0.2"
+	}
 }
