[Dev] Add refresh route in api-scrapper to refresh all torrents of a Media

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
       - postgres
     ports:
       - "${API_SCRAPPER_GRPC_PORT}:${API_SCRAPPER_GRPC_PORT}"
+      - "${API_SCRAPPER_GRPC_GATEWAY_PORT}:${API_SCRAPPER_GRPC_GATEWAY_PORT}"
 
   api-search:
     build: ./api-search
