[Fix] SSL error with some CDNs

--- a/tmdb-proxy/nginx.conf
+++ b/tmdb-proxy/nginx.conf
@@ -19,6 +19,7 @@ http {
 			}
 
 			proxy_pass https://image.tmdb.org:443;
+			proxy_ssl_server_name on;
 			proxy_set_header Host "image.tmdb.org";
 			proxy_cache imgcache;
 			proxy_cache_key $scheme$request_uri;
