[Dev] google: finish the google connection

--- a/api-auth/.env.example
+++ b/api-auth/.env.example
@@ -9,3 +9,11 @@ API_42_REDIRECTION_CLIENT_SECRET=...
 API_42_REDIRECTION_REDIRECT_URI_ID=...
 
 API_42_REQUEST_ME=...
+
+API_GOOGLE_client_id=...
+API_GOOGLE_client_secret=...
+API_GOOGLE_redirect_url=...
+API_GOOGLE_scope_email=...
+API_GOOGLE_scope_userinfo=...
+
+API_GOOGLE_userinfo_url=...
