--- a/tmdb-proxy/nginx.conf
+++ b/tmdb-proxy/nginx.conf
@@ -2,6 +2,8 @@ events {
 }
 
 http {
+	limit_req_zone $binary_remote_addr zone=imglimit:10m rate=20r/s;
+
     proxy_cache_path /var/www/cache levels=1:2 keys_zone=imgcache:10m max_size=1000m inactive=720m;
     proxy_temp_path /var/www/cache/tmp;
 
@@ -21,6 +23,7 @@ http {
 			proxy_pass https://image.tmdb.org:443;
 			proxy_ssl_server_name on;
 			proxy_set_header Host "image.tmdb.org";
+            limit_req zone=imglimit burst=82;
 			proxy_cache imgcache;
 			proxy_cache_key $scheme$request_uri;
 			proxy_cache_valid 200 302 1y;
