[Dev] Add Media Comments routes in api-media [Dev] Extract service from Comment proto

--- a/sqlc/sqlc.yaml
+++ b/sqlc/sqlc.yaml
@@ -20,6 +20,7 @@ packages:
     name: "sqlc"
     engine: "postgresql"
     schema:
+      - "sql/users/schema.sql"
       - "sql/medias/schema.sql"
       - "sql/torrents/schema.sql"
       - "sql/comments/schema.sql"
