--- a/api-streaming/package.json
+++ b/api-streaming/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/fluent-ffmpeg": "^2.1.20",
     "@types/node": "^18.0.3",
     "@types/pg": "^8.6.5",
+    "@types/torrent-stream": "^0.0.6",
     "nodemon": "^2.0.19",
     "ts-node": "^10.8.2",
     "ts-node-dev": "^2.0.0",
