--- a/api-streaming/package.json
+++ b/api-streaming/package.json
@@ -11,14 +11,17 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/fluent-ffmpeg": "^2.1.20",
     "@types/node": "^18.0.3",
     "@types/pg": "^8.6.5",
+    "@types/torrent-stream": "^0.0.6",
     "nodemon": "^2.0.19",
     "ts-node": "^10.8.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@logdna/tail-file": "^3.0.0",
     "@types/parse-torrent": "^5.8.4",
     "express": "^4.18.1",
     "fluent-ffmpeg": "^2.1.2",
