[Env] Ignore local node_modules in node APIs [Dev] Add pump in api-streaming [Fix] Remove old svelte-kit dependency in client

--- a/api-streaming/Dockerfile
+++ b/api-streaming/Dockerfile
@@ -1,19 +1,13 @@
 # https://nodejs.org/en/docs/guides/nodejs-docker-webapp/
-
 FROM node:16-alpine3.15
-
-WORKDIR /usr/src/app
 
 # install ffmpeg for convert mkv to mp4
 RUN apk add --no-cache ffmpeg
 
-# copy configuration files
-COPY *.json ./
+# copy api files
+WORKDIR /app
+COPY ./package.json .
 
-# install project
-RUN npm install
-
-# copy project
-COPY . .
-
+# install CompileDaemon (hot reload)
+RUN yarn install
 ENTRYPOINT npx ts-node-dev --respawn main.ts
