--- a/client/package.json
+++ b/client/package.json
@@ -2,10 +2,10 @@
 	"name": "client",
 	"version": "0.0.1",
 	"scripts": {
-		"dev": "svelte-kit dev",
-		"build": "svelte-kit build",
+		"dev": "vite dev",
+		"build": "vite build",
 		"package": "svelte-kit package",
-		"preview": "svelte-kit preview",
+		"preview": "vite preview",
 		"prepare": "svelte-kit sync",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
@@ -29,7 +29,8 @@
 		"svelte-preprocess": "^4.10.7",
 		"tailwindcss": "^3.1.2",
 		"tslib": "^2.3.1",
-		"typescript": "^4.7.2"
+		"typescript": "^4.7.2",
+		"vite": "^3.0.0"
 	},
 	"type": "module",
 	"dependencies": {
