[Dev] position: finish basic position api

--- a/api-position/package.json
+++ b/api-position/package.json
@@ -18,8 +18,12 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/cookie-parser": "^1.4.3",
     "@types/pg": "^8.6.5",
     "@types/redis": "^4.0.11",
+    "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
     "pg": "^8.7.3",
     "redis": "^4.2.0"
