[Dev] Add subtitle downloader in api-streaming [Dev] Extract main function to controllers in api-streaming

--- a/api-streaming/.env.example
+++ b/api-streaming/.env.example
@@ -1,7 +1,11 @@
-API_STREAMING_PORT=...
+API_STREAMING_PORT=3030
 
-PGUSER=...
-PGHOST=...
-PGPASSWORD=...
-PGDATABASE=...
-PGPORT=...
+PGUSER=hyper
+PGHOST=postgres
+PGPASSWORD=1234
+PGDATABASE=hypertube
+PGPORT=5432
+
+OSDB_API_KEY=azerty123456
+OSDB_USERNAME=hypertube
+OSDB_USERNAME=password
