--- a/api-streaming/package.json
+++ b/api-streaming/package.json
@@ -26,11 +26,14 @@
     "@types/cors": "^2.8.12",
     "@types/parse-torrent": "^5.8.4",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "fluent-ffmpeg": "^2.1.2",
     "parse-torrent": "^9.1.5",
     "pg": "^8.7.3",
     "pump": "^3.0.0",
-    "torrent-stream": "^1.2.1"
+    "subtitle": "^4.2.1",
+    "torrent-stream": "^1.2.1",
+    "undici": "^5.8.0"
   }
 }
