[Dev] Update nodejs APIs Dockerfile

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,11 +1,10 @@
 FROM node:16-alpine3.15
 
-# https://sveltesociety.dev/recipes/publishing-and-deploying/dockerize-a-svelte-app/
-
-# copy api files
 WORKDIR /app
 COPY ./package.json .
+# COPY ./yarn.lock .
 
-# install CompileDaemon (hot reload)
 RUN yarn install
+COPY . .
+
 ENTRYPOINT yarn run dev --host --port ${CLIENT_PORT}
