--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -92,8 +92,8 @@ services:
     env_file:
       - ./api-position/.env
     volumes:
-      - ./api-position:/usr/src/app
-      # - position-node-modules:/app/node_modules
+      - ./api-position:/app
+      - /app/node_modules
     depends_on:
       - postgres
       - redis
