--- a/api-position/Dockerfile
+++ b/api-position/Dockerfile
@@ -1,19 +1,11 @@
 # https://nodejs.org/en/docs/guides/nodejs-docker-webapp/
-
 FROM node:16-alpine3.15
 
-WORKDIR /usr/src/app
+WORKDIR /app
+COPY ./package.json .
+# COPY ./yarn.lock .
 
-# install ffmpeg for convert mkv to mp4
-RUN apk add --no-cache ffmpeg
-
-# copy configuration files
-COPY *.json ./
-
-# install project
-RUN npm install
-
-# copy project
+RUN yarn install
 COPY . .
 
 ENTRYPOINT npx ts-node-dev --respawn main.ts
