--- a/api-streaming/Dockerfile
+++ b/api-streaming/Dockerfile
@@ -1,13 +1,14 @@
 # https://nodejs.org/en/docs/guides/nodejs-docker-webapp/
 FROM node:16-alpine3.15
 
-# install ffmpeg for convert mkv to mp4
+# install ffmpeg for transcode
 RUN apk add --no-cache ffmpeg
 
-# copy api files
 WORKDIR /app
 COPY ./package.json .
+# COPY ./yarn.lock .
 
-# install CompileDaemon (hot reload)
 RUN yarn install
+COPY . .
+
 ENTRYPOINT npx ts-node-dev --respawn main.ts
