--- a/api-position/package.json
+++ b/api-position/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.5",
     "nodemon": "^2.0.19",
@@ -24,6 +25,7 @@
     "@types/redis": "^4.0.11",
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "pg": "^8.7.3",
     "redis": "^4.2.0"
