--- a/api-streaming/package.json
+++ b/api-streaming/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/fluent-ffmpeg": "^2.1.20",
     "@types/node": "^18.0.3",
@@ -25,6 +27,8 @@
     "@logdna/tail-file": "^3.0.0",
     "@types/cors": "^2.8.12",
     "@types/parse-torrent": "^5.8.4",
+    "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
@@ -32,6 +36,7 @@
     "parse-torrent": "^9.1.5",
     "pg": "^8.7.3",
     "pump": "^3.0.0",
+    "redis": "^4.2.0",
     "subtitle": "^4.2.1",
     "torrent-stream": "^1.2.1",
     "undici": "^5.8.0"
