--- a/api-streaming/package.json
+++ b/api-streaming/package.json
@@ -1,44 +1,51 @@
 {
-  "name": "api-streaming",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/body-parser": "^1.19.2",
-    "@types/cookie-parser": "^1.4.3",
-    "@types/express": "^4.17.13",
-    "@types/fluent-ffmpeg": "^2.1.20",
-    "@types/node": "^18.0.3",
-    "@types/pg": "^8.6.5",
-    "@types/pump": "^1.1.1",
-    "@types/torrent-stream": "^0.0.6",
-    "nodemon": "^2.0.19",
-    "ts-node": "^10.8.2",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^4.7.4"
-  },
-  "dependencies": {
-    "@logdna/tail-file": "^3.0.0",
-    "@types/cors": "^2.8.12",
-    "@types/parse-torrent": "^5.8.4",
-    "body-parser": "^1.20.0",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "fluent-ffmpeg": "^2.1.2",
-    "parse-torrent": "^9.1.5",
-    "pg": "^8.7.3",
-    "pump": "^3.0.0",
-    "redis": "^4.2.0",
-    "subtitle": "^4.2.1",
-    "torrent-stream": "^1.2.1",
-    "undici": "^5.8.0"
-  }
+	"name": "api-streaming",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"lint": "prettier --check --plugin-search-dir=. . && eslint .",
+		"format": "prettier --write --plugin-search-dir=. ."
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@types/body-parser": "^1.19.2",
+		"@types/cookie-parser": "^1.4.3",
+		"@types/express": "^4.17.13",
+		"@types/fluent-ffmpeg": "^2.1.20",
+		"@types/node": "^18.0.3",
+		"@types/pg": "^8.6.5",
+		"@types/pump": "^1.1.1",
+		"@types/torrent-stream": "^0.0.6",
+		"@typescript-eslint/eslint-plugin": "^5.30.7",
+		"@typescript-eslint/parser": "^5.30.7",
+		"eslint": "^8.20.0",
+		"eslint-config-prettier": "^8.5.0",
+		"nodemon": "^2.0.19",
+		"prettier": "^2.7.1",
+		"ts-node": "^10.8.2",
+		"ts-node-dev": "^2.0.0",
+		"typescript": "^4.7.4"
+	},
+	"dependencies": {
+		"@logdna/tail-file": "^3.0.0",
+		"@types/cors": "^2.8.12",
+		"@types/parse-torrent": "^5.8.4",
+		"body-parser": "^1.20.0",
+		"cookie-parser": "^1.4.6",
+		"cors": "^2.8.5",
+		"dotenv": "^16.0.1",
+		"express": "^4.18.1",
+		"fluent-ffmpeg": "^2.1.2",
+		"parse-torrent": "^9.1.5",
+		"pg": "^8.7.3",
+		"pump": "^3.0.0",
+		"redis": "^4.2.0",
+		"subtitle": "^4.2.1",
+		"torrent-stream": "^1.2.1",
+		"undici": "^5.8.0"
+	}
 }
