--- a/api-position/Dockerfile
+++ b/api-position/Dockerfile
@@ -1,9 +1,14 @@
 # https://nodejs.org/en/docs/guides/nodejs-docker-webapp/
-FROM node:16-alpine3.15
+FROM node:16-alpine3.15 as builder
+
+RUN yarn set version stable
+
+FROM builder
 
 WORKDIR /app
 COPY ./package.json .
-# COPY ./yarn.lock .
+COPY ./.yarnrc.yml .
+COPY ./yarn.lock .
 
 RUN yarn install
 COPY . .
