--- a/api-streaming/.gitignore
+++ b/api-streaming/.gitignore
@@ -9,3 +9,12 @@ node_modules
 
 .cache/*
 !.cache/.gitkeep
+
+# yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
