--- a/api-streaming/Dockerfile
+++ b/api-streaming/Dockerfile
@@ -1,12 +1,17 @@
 # https://nodejs.org/en/docs/guides/nodejs-docker-webapp/
-FROM node:16-alpine3.15
+FROM node:16-alpine3.15 as builder
+
+RUN yarn set version stable
+
+FROM builder
 
 # install ffmpeg for transcode
 RUN apk add --no-cache ffmpeg
 
 WORKDIR /app
 COPY ./package.json .
-# COPY ./yarn.lock .
+COPY ./.yarnrc.yml .
+COPY ./yarn.lock .
 
 RUN yarn install
 COPY . .
