--- a/client/.gitignore
+++ b/client/.gitignore
@@ -6,3 +6,12 @@ node_modules
 .env
 .env.*
 !.env.example
+
+# yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
