--- a/api-streaming/package.json
+++ b/api-streaming/package.json
@@ -18,9 +18,11 @@
 		"@types/express": "^4.17.13",
 		"@types/fluent-ffmpeg": "^2.1.20",
 		"@types/node": "^18.0.3",
+		"@types/node-cron": "^3.0.2",
 		"@types/parse-torrent": "^5.8.4",
 		"@types/pg": "^8.6.5",
 		"@types/pump": "^1.1.1",
+		"@types/rimraf": "^3.0.2",
 		"@types/torrent-stream": "^0.0.6",
 		"@typescript-eslint/eslint-plugin": "^5.30.7",
 		"@typescript-eslint/parser": "^5.30.7",
@@ -40,12 +42,15 @@
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"fluent-ffmpeg": "^2.1.2",
+		"node-cron": "^3.0.1",
 		"parse-torrent": "^9.1.5",
 		"pg": "^8.7.3",
 		"pump": "^3.0.0",
 		"redis": "^4.2.0",
+		"rimraf": "^3.0.2",
 		"subtitle": "^4.2.1",
 		"torrent-stream": "^1.2.1",
-		"undici": "^5.8.0"
+		"undici": "^5.8.0",
+		"uuid": "^8.3.2"
 	}
 }
