[Dev] api-streaming: Add interval and CRON to .env [Fix] Use dotenv parsed values instead of process.env

--- a/api-streaming/.env.example
+++ b/api-streaming/.env.example
@@ -8,4 +8,7 @@ PGPORT=5432
 
 OSDB_API_KEY=azerty123456
 OSDB_USERNAME=hypertube
-OSDB_USERNAME=password
+OSDB_PASSWORD=password
+
+OLD_FILES_INTERVAL="30 days"
+OLD_FILES_CRON="0 * * * *"
