--- a/api-position/Dockerfile
+++ b/api-position/Dockerfile
@@ -1,9 +1,9 @@
-# https://nodejs.org/en/docs/guides/nodejs-docker-webapp/
 FROM node:16-alpine3.15 as builder
 
-RUN yarn set version stable
+# install ffmpeg for transcode
+RUN apk add --no-cache ffmpeg
 
-FROM builder
+RUN yarn set version stable
 
 WORKDIR /app
 COPY ./package.json .
@@ -11,6 +11,11 @@ COPY ./.yarnrc.yml .
 COPY ./yarn.lock .
 
 RUN yarn install
+
+FROM builder
+
+WORKDIR /app
+
 COPY . .
 
 ENTRYPOINT npx ts-node-dev --respawn main.ts
