[Fix] client: Fix Refresh Peers button color [Env] docker: Set fixed postgres image version

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -133,7 +133,7 @@ services:
       - redis
 
   postgres:
-    image: postgres
+    image: postgres:14.4-alpine
     restart: always
     env_file:
       - ./postgres/.env
