[Dev] test container: change the api-auth testing paradigm (use test containers)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     env_file:
       - ./api-auth/.env
       - ./postgres/.env
+      - ./redis/.env
     volumes:
       - ./api-auth:/app
     depends_on:
