[Env] Add default values in .env.example [Env] redis: Use env port [Fix] postgres: Add missing column in MediaActors table

--- a/api-auth/.env.example
+++ b/api-auth/.env.example
@@ -1,19 +1,23 @@
-API_AUTH_GRPC_PORT=0000
-API_AUTH_GRPC_GATEWAY_PORT=0000
-API_AUTH_HTTP_PORT=0000
+API_AUTH_GRPC_PORT=7010
+API_AUTH_GRPC_GATEWAY_PORT=7070
+API_AUTH_HTTP_PORT=7080
 
-API_42_REDIRECTION_REQUEST_URL=...
-API_42_REDIRECTION_GRANT_TYPE=...
-API_42_REDIRECTION_CLIENT_ID=...
-API_42_REDIRECTION_CLIENT_SECRET=...
-API_42_REDIRECTION_REDIRECT_URI_ID=...
+API_42_REDIRECTION_REQUEST_URL=https://api.intra.42.fr/oauth/token
+API_42_REDIRECTION_GRANT_TYPE=authorization_code
+API_42_REDIRECTION_CLIENT_ID=azerty
+API_42_REDIRECTION_CLIENT_SECRET=azerty
+API_42_REDIRECTION_REDIRECT_URI_ID=http://localhost
 
-API_42_REQUEST_ME=...
+API_42_REQUEST_ME=https://api.intra.42.fr/v2/me
 
-API_GOOGLE_client_id=...
-API_GOOGLE_client_secret=...
-API_GOOGLE_redirect_url=...
-API_GOOGLE_scope_email=...
-API_GOOGLE_scope_userinfo=...
+API_GOOGLE_client_id=azerty
+API_GOOGLE_client_secret=azerty
+API_GOOGLE_redirect_url=http://localhost
+API_GOOGLE_scope_email=https://www.googleapis.com/auth/userinfo.email
+API_GOOGLE_scope_userinfo=https://www.googleapis.com/auth/userinfo.profile
 
-API_GOOGLE_userinfo_url=...
+API_GOOGLE_userinfo_url=https://www.googleapis.com/oauth2/v2/userinfo
+
+API_OUTLOOK_EMAIL=azer@t.y
+API_OUTLOOK_PASSWORD=azerty
+API_OUTLOOK_ADDRESSE=smtp-mail.outlook.com:25
