--- a/client/.env.example
+++ b/client/.env.example
@@ -1,5 +1,4 @@
-CLIENT_PORT=0000
+CLIENT_PORT=4040
 
-VITE_GOOGLE_OAUTH_AUTHORIZE=...
-
-VITE_42_OAUTH_AUTHORIZE=...
+VITE_GOOGLE_OAUTH_AUTHORIZE=http://localhost:7080/login_google
+VITE_42_OAUTH_AUTHORIZE=VITE_42_OAUTH_AUTHORIZE=https://api.intra.42.fr/oauth/authorize?client_id=azerty&redirect_uri=http://localhost&response_type=code
