--- a/api-position/.env.example
+++ b/api-position/.env.example
@@ -1,7 +1,7 @@
-API_POSITION_PORT=...
+API_POSITION_PORT=3040
 
-PGUSER=...
-PGHOST=...
-PGPASSWORD=...
-PGDATABASE=...
-PGPORT=...
+PGHOST=postgres
+PGPORT=5432
+PGUSER=hyper
+PGPASSWORD=1234
+PGDATABASE=hypertube
