--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,16 @@
 version: "3.8"
 services:
   api-auth:
-    build: ./api-auth
+    build:
+      dockerfile: ./api-auth/Dockerfile
+      context: ./
     env_file:
       - ./api-auth/.env
       - ./postgres/.env
       - ./redis/.env
     volumes:
-      - ./api-auth:/app
+      - ./api-auth:/hypertube/app
+      - ./.shared:/hypertube/.shared
     depends_on:
       - postgres
       - redis
@@ -107,8 +110,8 @@ services:
     ports:
       - "${API_POSITION_PORT}:${API_POSITION_PORT}"
 
-  api-tester:
-    build: ./api-tester
+  tests-meta:
+    build: ./tests/meta
     env_file:
       - ./client/.env
       - ./api-auth/.env
@@ -117,7 +120,7 @@ services:
       - ./api-media/.env
       - ./redis/.env
     volumes:
-      - ./api-tester:/app
+      - ./tests/meta:/app
       - /app/node_modules
       - /app/.yarn
     depends_on:
