[Fix] client: Fix infinite redirection with broken token [Env] Remove api-tester on docker compose up

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -131,6 +131,8 @@ services:
       - api-user
       - api-position
       - redis
+    profiles:
+      - test
 
   postgres:
     image: postgres:14.4-alpine
