[Dev] mono_repo: improve the environment / shared parts

--- a/api-user/.env.example
+++ b/api-user/.env.example
@@ -1,3 +1,2 @@
-API_USER_GRPC_PORT=0000
-API_USER_GRPC_GATEWAY_PORT=0000
-API_USER_HTTP_PORT=0000
+API_USER_GRPC_PORT=...
+API_USER_GRPC_GATEWAY_PORT=...
