--- a/api-media/.env.example
+++ b/api-media/.env.example
@@ -1,3 +1,3 @@
 API_MEDIA_GRPC_PORT=7012
 API_MEDIA_GRPC_GATEWAY_PORT=7072
-API_SCRAPPER_GRPC_PORT=7011
+API_SCRAPPER_GRPC_PORT="${API_SCRAPPER_GRPC_PORT}"
