--- a/client/.env.example
+++ b/client/.env.example
@@ -1,4 +1,13 @@
+DOMAIN=localhost
+VITE_DOMAIN="${DOMAIN}"
 CLIENT_PORT=4040
 
-VITE_GOOGLE_OAUTH_AUTHORIZE=http://localhost:7080/login_google
-VITE_42_OAUTH_AUTHORIZE=VITE_42_OAUTH_AUTHORIZE=https://api.intra.42.fr/oauth/authorize?client_id=azerty&redirect_uri=http://localhost&response_type=code
+VITE_GOOGLE_OAUTH_AUTHORIZE="http://${DOMAIN}:${API_AUTH_HTTP_PORT}/login_google"
+VITE_42_OAUTH_AUTHORIZE="https://api.intra.42.fr/oauth/authorize?client_id=azerty&redirect_uri=http%3A%2F%2F${DOMAIN}%3A${API_AUTH_HTTP_PORT}%2Fredirect_42&response_type=code"
+
+VITE_API_MEDIA_PORT="${API_MEDIA_GRPC_GATEWAY_PORT}"
+VITE_TMDB_PROXY_PORT="${TMDB_PROXY_PORT}"
+VITE_API_STREAMING_PORT="${API_STREAMING_PORT}"
+VITE_API_USER_PORT="${API_USER_GRPC_GATEWAY_PORT}"
+VITE_API_AUTH_PORT="${API_AUTH_GRPC_GATEWAY_PORT}"
+VITE_API_POSITION_PORT="${API_POSITION_PORT}"
