[Dev] shared: Add Client env [Dev] api-auth: Use Client env to remove hard coded URLs [Dev] api-streaming/api-position: Remove hard coded URLs

--- a/api-auth/.env.example
+++ b/api-auth/.env.example
@@ -6,13 +6,13 @@ API_42_REDIRECTION_REQUEST_URL=https://api.intra.42.fr/oauth/token
 API_42_REDIRECTION_GRANT_TYPE=authorization_code
 API_42_REDIRECTION_CLIENT_ID=azerty
 API_42_REDIRECTION_CLIENT_SECRET=azerty
-API_42_REDIRECTION_REDIRECT_URI_ID=http://localhost
+API_42_REDIRECTION_REDIRECT_URI_ID="http://${DOMAIN}"
 
 API_42_REQUEST_ME=https://api.intra.42.fr/v2/me
 
 API_GOOGLE_client_id=azerty
 API_GOOGLE_client_secret=azerty
-API_GOOGLE_redirect_url=http://localhost
+API_GOOGLE_redirect_url="http://${DOMAIN}"
 API_GOOGLE_scope_email=https://www.googleapis.com/auth/userinfo.email
 API_GOOGLE_scope_userinfo=https://www.googleapis.com/auth/userinfo.profile
 
