--- a/api-position/package.json
+++ b/api-position/package.json
@@ -32,6 +32,7 @@
 		"body-parser": "^1.20.0",
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
+		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"pg": "^8.7.3",
 		"redis": "^4.2.0"
