[Env] env: Reste hard coded URLs [Fix] client: Show refresh instead of back to search in error page

--- a/client/.env.example
+++ b/client/.env.example
@@ -1,19 +1,21 @@
-# "${DOMAIN}"
+# DOMAIN
 VITE_DOMAIN=localhost
 CLIENT_PORT=4040
 
-VITE_GOOGLE_OAUTH_AUTHORIZE="http://${DOMAIN}:${API_AUTH_HTTP_PORT}/login_google"
-VITE_42_OAUTH_AUTHORIZE="https://api.intra.42.fr/oauth/authorize?client_id=azerty&redirect_uri=http%3A%2F%2F${DOMAIN}%3A${API_AUTH_HTTP_PORT}%2Fredirect_42&response_type=code"
+# DOMAIN, API_AUTH_HTTP_PORT
+VITE_GOOGLE_OAUTH_AUTHORIZE="http://localhost:7080/login_google"
+# DOMAIN, API_AUTH_HTTP_PORT
+VITE_42_OAUTH_AUTHORIZE="https://api.intra.42.fr/oauth/authorize?client_id=azerty&redirect_uri=http%3A%2F%2Flocalhost%3A7080%2Fredirect_42&response_type=code"
 
-# "${API_MEDIA_GRPC_GATEWAY_PORT}"
+# API_MEDIA_GRPC_GATEWAY_PORT
 VITE_API_MEDIA_PORT=7072
-# "${TMDB_PROXY_PORT}"
+# TMDB_PROXY_PORT
 VITE_TMDB_PROXY_PORT=7260
-#"${API_STREAMING_PORT}"
+#API_STREAMING_PORT
 VITE_API_STREAMING_PORT=3030
-# "${API_USER_GRPC_GATEWAY_PORT}"
+# API_USER_GRPC_GATEWAY_PORT
 VITE_API_USER_PORT=7170
-# "${API_AUTH_GRPC_GATEWAY_PORT}"
+# API_AUTH_GRPC_GATEWAY_PORT
 VITE_API_AUTH_PORT=7070
-# "${API_POSITION_PORT}"
+# API_POSITION_PORT
 VITE_API_POSITION_PORT=3040
