[Dev] tests: Extract test values from init.sql [Dev] tests: Add init-test.sql in Magefile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -156,6 +156,7 @@ services:
       - api-auth
       - api-user
       - api-position
+      - api-media
       - redis
     profiles:
       - test
