--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     depends_on:
       - postgres
       - redis
+    restart: on-failure
     links:
       - postgres
       - redis
@@ -38,6 +39,7 @@ services:
     depends_on:
       - postgres
       - redis
+    restart: on-failure
     links:
       - postgres
       - redis
@@ -60,6 +62,7 @@ services:
       - ./.shared:/hypertube/.shared
     depends_on:
       - postgres
+    restart: on-failure
     links:
       - postgres
     ports:
@@ -81,6 +84,7 @@ services:
       - postgres
       - api-scrapper
       - redis
+    restart: on-failure
     links:
       - postgres
       - api-scrapper
@@ -103,6 +107,7 @@ services:
       - /app/.yarn
     depends_on:
       - postgres
+    restart: on-failure
     links:
       - client
       - postgres
@@ -124,6 +129,7 @@ services:
     depends_on:
       - postgres
       - redis
+    restart: on-failure
     links:
       - client
       - postgres
