--- a/sqlc/sqlc.yaml
+++ b/sqlc/sqlc.yaml
@@ -4,6 +4,9 @@ packages:
     name: "sqlc"
     engine: "postgresql"
     schema:
+      - "sql/torrents/schema.sql"
+      - "sql/position/schema.sql"
+      - "sql/medias/schema.sql"
       - "sql/users/schema.sql"
     queries:
       - "sql/users/query.sql"
@@ -11,8 +14,12 @@ packages:
     name: "sqlc"
     engine: "postgresql"
     schema:
+      - "sql/torrents/schema.sql"
+      - "sql/position/schema.sql"
+      - "sql/medias/schema.sql"
       - "sql/users/schema.sql"
     queries:
+      - "sql/medias/query.sql"
       - "sql/users/query.sql"
   - path: "../api-scrapper/sqlc"
     name: "sqlc"
@@ -28,9 +35,9 @@ packages:
     name: "sqlc"
     engine: "postgresql"
     schema:
-      - "sql/users/schema.sql"
-      - "sql/medias/schema.sql"
       - "sql/torrents/schema.sql"
+      - "sql/medias/schema.sql"
+      - "sql/users/schema.sql"
       - "sql/comments/schema.sql"
       - "sql/position/schema.sql"
     queries:
